# DesignPatterns

./: CMakeLists.txt  README.md  main.cpp
AbstractFactory/: Car.cpp  CarFactory.cpp
Adapter/: Adapter.cpp  Adapter.h  AmericanSocketInterface.h  ElectricKettle.cpp  ElectricKettle.h  EuropeanSocketInterface.h  Socket.h
Builder/: Cocinero.cpp  Cocinero.h  Pastel.cpp  Pastel.h  Pasteleria.cpp  Pasteleria.h  cocinero.cpp  cocinero.h  pastel.cpp  pasteleria.cpp  pasteleria.h
Facade/: Audi.cpp  Audi.h  Facade.cpp  Facade.h  Mazda.cpp  Mazda.h
Observer/: Client.cpp  Client.h  Observer.h  Subject.h  WeatherData.cpp  WeatherData.h
abstractFactory/: CMakeLists.txt  car.cpp  carFactory.cpp  main.cpp
facade/: Audi.cpp  Audi.h  CMakeLists.txt  Mazda.cpp  Mazda.h  facade.cpp  facade.h  main.cpp
